# tecken

./: Cargo.toml  README.md  build.sh  notes.md
src/: arg_parse.rs  controls.rs  main.rs  stopwatch.rs  utils.rs  words.txt
src/static/: help.txt
src/subcommands/: help.rs  mod.rs
